# code-analyze

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  celery_app.py  config.py  main.py
app/api/endpoints/: review.py
app/core/: __init__.py  embeddings.py  llm_client.py  local_embeddings.py  prompts.py
app/models/: schemas.py
app/services/: cache_service.py  code_indexer.py  code_parser.py  docker_executor.py  feature_analyzer.py  file_extractor.py  templates.py  test_generator.py
app/tasks/: indexing_tasks.py  llm_tasks.py
app/utils/: ignore_rules.py
tests/: test_code_parser.py
